Refactor PerformanceMetricsServiceTest and UserServiceTest for improved clarity and coverage
- Updated PerformanceMetricsServiceTest to enhance method names for better readability and understanding of test intentions.
- Introduced mock metrics in PerformanceMetricsServiceTest to simulate various scenarios and validate metrics retrieval and formatting.
- Added tests in UserServiceTest for user profile retrieval, including handling of edge cases such as invalid user IDs and users with no posts or comments.
- Implemented utility methods in UserServiceTest to create mock Post and Comment entities for testing.
- Enhanced assertions in UserServiceTest to ensure correct interactions with repositories and utility methods.
- Utilized MockedStatic for CommentUtils in UserServiceTest to verify static method calls during user profile retrieval.